[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://interface/images/menu_bg.png" type="Texture" id=2]
[ext_resource path="res://interface/AchievementBox.gd" type="Script" id=3]
[ext_resource path="res://interface/images/menu/exit_bg.png" type="Texture" id=4]

[node name="AchievementBox" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 80.0
margin_top = 160.0
margin_right = 400.0
margin_bottom = 560.0
texture = ExtResource( 2 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 380.0
margin_bottom = 540.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Achievement1" type="TextureRect" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true

[node name="Achievement2" type="TextureRect" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 280.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true

[node name="Achievement3" type="TextureRect" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 280.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true

[node name="Achievement4" type="TextureRect" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 280.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true

[node name="Achievement5" type="TextureRect" parent="VBoxContainer"]
margin_top = 232.0
margin_right = 280.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true

[node name="Achievement6" type="TextureRect" parent="VBoxContainer"]
margin_top = 290.0
margin_right = 280.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 1 )
expand = true

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 370.0
margin_top = 160.0
margin_right = 400.0
margin_bottom = 190.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
